# 2d_quad

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
controller/: allocation.h  motor_mixing.h  pid.h
controller/pid_cascaded/: pid_cascaded.cpp  pid_cascaded.h
controller_new/pid_cascaded/: pid_cascaded.h
math_helper/: math_helper.h
model/: 2d_quad.cpp  2d_quad.h  CMakeLists.txt  parameters.yaml
model/quad_2d/: 2d_quad.yaml  quad_2d.cpp  quad_2d.h
project/: CMakeLists.txt  main.cpp  main_new.cpp  parameters.yaml  plot.h  set_values.h
project/include/: plot.h  set_values.h
project/parameters/: controller_parameters.yaml  initial_conditions.yaml  plot_parameters.yaml  simulation_parameters.yaml
